--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ img {
   font-weight: 400;
   color: #333; /*A dark gray */
   text-align: right;
-  text-transform: capitalize;
+  text-transform: uppercase;
 }
 
 
